apps/platform/ingestion-runner/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-ingestion
  labels:
    platform.jaccloud.nl/tenant: platform
