apps/platform/ingestion-runner/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-runner
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingestion-runner
