apps/platform/ingestion-runner/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-runner
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ingestion-runner.dev.jac.dot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion-runner
                port:
                  number: 8000
